# BI-collection

./: README.md  techstack.md  techstack.yml
.github/workflows/: dash.yaml
Dash/: README.md
SAS/: migrate.md
lib/: README.md
lib/Dash/: Dockerfile  README.md  pyproject.toml
lib/Dash/davidkhala/dash/app/: Dockerfile  gapminder_unfiltered.py
lib/Pandas/: README.md
lib/matplotlib/: README.md
lib/redash/: README.md
metabase/: README.md
redash/: README.md
redash/query/: file.md
superset/: README.md  add-drive.sh  compose.sh
